Add core structure elements to body

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>header content</header>
+    <section>Main Image + Title</section>
+    <section>Travel and Food Articles</section>
+    <section>Call to Action</section>
+    <footer>Social Media</footer>
 </body>
 </html>
