Add key structure to header

--- a/index.html
+++ b/index.html
@@ -7,13 +7,41 @@
     <meta name="description" content="Blog about travelling and vegan food">
     <meta name="keywords" content="vegan blog, travelling, vegan food">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>One Backpack For Two</title>
 </head>
 <body>
-    <header>header content</header>
-    <section>Main Image + Title</section>
-    <section>Travel and Food Articles</section>
-    <section>Call to Action</section>
-    <footer>Social Media</footer>
+    <header>
+        <a href="index.html">
+            Logo
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">HOME</a>
+                </li>
+                <li>
+                    <a href="#">TRAVEL</a>
+                </li>
+                <li>
+                    <a href="#">FOOD</a>
+                </li>
+                <li>
+                    <a href="#">ABOUT US</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        Main Image + Title
+    </section>
+    <section>
+        Travel and Food Articles
+    </section>
+    <section>
+        Call to Action
+    </section>
+    <footer>
+        Social Media
+    </footer>
 </body>
 </html>
