Add logo image and style for headings and logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html">
-            Logo
+          <img id="logo" src="assets/images/One Backpack For Two-1(1).png" alt="pink written logo on green background">  
         </a>
         <nav>
             <ul>
