Add style to navigation links

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <a href="index.html">
-          <img id="logo" src="assets/images/One Backpack For Two-1(1).png" alt="pink written logo on green background">  
+          <img id="logo" src="assets/images/One Backpack For Two-1(1).png" alt="logo">  
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="#">HOME</a>
                 </li>
