--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img id="logo" src="assets/images/One Backpack For Two-2.png" alt="logo">  
+            <img id="logo" src="assets/images/One Backpack For Two_logo.png" alt="logo">  
         </a>
         <nav>
             <ul id="menu">
