Add hero image and text on image

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         </nav>
     </header>
     <section>
-        Main Image + Title
+        <div class="hero-image">
+            <div class="hero-text">
+                <h1>One Backpack For Two</h1>
+                <p>Two Ladies discovering Top Travel Destinations and delicious Vegan Food while exploring the World!</p>
+                <button>Our Story</button>
+            </div>
+        </div>
     </section>
     <section>
         Travel and Food Articles
