Add styling for .our-story button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="hero-text">
                 <h1>One Backpack For Two</h1>
                 <p>Two Ladies discovering Top Travel Destinations and delicious Vegan Food while exploring the World!</p>
-                <button>Our Story</button>
+                <button class="our-story">Our Story</button>
             </div>
         </div>
     </section>
