Add google fonts  link to HTML, andchange name on logo imagee

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog about travelling and vegan food">
     <meta name="keywords" content="vegan blog, travelling, vegan food">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display:wght@500&display=swap"
+        rel="stylesheet">
+
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+
     <title>One Backpack For Two</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
-            <img id="logo" src="assets/images/One Backpack For Two_logo.png" alt="logo">  
+            <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
         </a>
         <nav>
             <ul id="menu">
@@ -35,7 +47,8 @@
         <div class="hero-image">
             <div class="hero-text">
                 <h1>One Backpack For Two</h1>
-                <p>Two Ladies discovering Top Travel Destinations and delicious Vegan Food while exploring the World!</p>
+                <p>Two Ladies discovering Top Travel Destinations and delicious Vegan Food while exploring the World!
+                </p>
                 <button class="our-story">Our Story</button>
             </div>
         </div>
@@ -50,4 +63,5 @@
         Social Media
     </footer>
 </body>
+
 </html>
