Add main structure for Latest Blog Post Section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
             </div>
         </div>
     </section>
-    <section>
-        Travel and Food Articles
+    <section id="blog-posts">
+        <h1>Our Latest Blog Posts <i class="fa-thin fa-pencil"></i></h1>
+        <div id="post-container">
+            <div id="left-container">Left</div>
+            <div id="center-container">Center</div>
+            <div id="right-container">Right</div>
+        </div>
     </section>
     <section>
         Call to Action
