Adjust Latest Blog Post Structure and Style

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             </div>
         </div>
     </section>
-    <section id="blog-posts">
-        <h1>Our Latest Blog Posts <i class="fa-thin fa-pencil"></i></h1>
+    <section>
+        <h2 id="blog-posts">Our Latest Blog Posts</h2>
+        <hr>
         <div id="post-container">
             <div id="left-container">Left</div>
             <div id="center-container">Center</div>
@@ -67,6 +68,9 @@
     <footer>
         Social Media
     </footer>
+
+    <!-- Font Awesome Script -->
+    <script src="https://kit.fontawesome.com/3281dfb8c8.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
