Add container content main structure

--- a/index.html
+++ b/index.html
@@ -57,9 +57,20 @@
         <h2 id="blog-posts">Our Latest Blog Posts</h2>
         <hr>
         <div id="post-container">
-            <div id="left-container">Left</div>
-            <div id="center-container">Center</div>
-            <div id="right-container">Right</div>
+            <div id="left-container">
+                <a href=""><img src="" alt=""></a>
+                <a href=""><h3></h3></a>
+                <p></p>
+            </div>
+            <div id="center-container">
+                <a href=""><img src="" alt=""></a>
+                <a href=""><h3></h3></a>
+                <p></p>
+            </div>
+            <div id="right-container"></div>
+            <a href=""><img src="" alt=""></a>
+                <a href=""><h3></h3></a>
+                <p></p>
         </div>
     </section>
     <section>
