Change #latest-posts and .latest-posts-body

--- a/index.html
+++ b/index.html
@@ -56,21 +56,27 @@
     <section>
         <h2 id="blog-posts">Our Latest Blog Posts</h2>
         <hr>
-        <div id="post-container">
-            <div id="left-container">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><h3></h3></a>
+        <div id="latest-posts">
+            <div class="latest-posts-body">
+                <a href="#"><img src="" alt=""></a>
+                <a href="#">
+                    <h3></h3>
+                </a>
                 <p></p>
             </div>
-            <div id="center-container">
-                <a href=""><img src="" alt=""></a>
-                <a href=""><h3></h3></a>
+            <div class="latest-posts-body">
+                <a href="#"><img src="" alt=""></a>
+                <a href="#">
+                    <h3></h3>
+                </a>
                 <p></p>
             </div>
-            <div id="right-container"></div>
-            <a href=""><img src="" alt=""></a>
-                <a href=""><h3></h3></a>
-                <p></p>
+            <div class="latest-posts-body"></div>
+            <a href="#"><img src="" alt=""></a>
+            <a href="#">
+                <h3></h3>
+            </a>
+            <p></p>
         </div>
     </section>
     <section>
