Add content and style to first two .latest-posts-body

--- a/index.html
+++ b/index.html
@@ -58,25 +58,37 @@
         <hr>
         <div id="latest-posts">
             <div class="latest-posts-body">
-                <a href="#"><img src="" alt=""></a>
-                <a href="#">
-                    <h3></h3>
+                <a href="#"><img class="latest-posts-image" src="assets/images/berlin.jpg"
+                        alt="Brandenburger Gate Berlin"></a>
+                <a class="title-link" href="#">
+                    <h3 class="latest-posts-title">Top 5 Vegan Restaurants to Visit in Berlin, Germany</h3>
                 </a>
-                <p></p>
+                <hr>
+                <p class="latest-posts-description">Craving some vegan food while in Germany's capital city? Lucky for
+                    you, Berlin is teeming with vegan-friendly restaurants, cafes, and bakeries, making it the perfect
+                    destination for plant-based travellers. Here are our top five picks for vegan places to visit in
+                    Berlin.</p>
             </div>
+
             <div class="latest-posts-body">
-                <a href="#"><img src="" alt=""></a>
-                <a href="#">
-                    <h3></h3>
+                <a href="#"><img class="latest-posts-image" src="assets/images/bali.jpg"
+                        alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains"></a>
+                <a class="title-link" href="#">
+                    <h3 class="latest-posts-title">Top 3 Vegan Accomodations in Bali, Indonesia</h3>
                 </a>
-                <p></p>
+                <hr>
+                <p class="latest-posts-description">If Bali is on your bucket list, than you're in for a treat. Not only
+                    is the Island of the Gods stunning, with its pristine beaches, lush jungles and legendary sunsets,
+                    but it's also a vegan paradise. Here are our top 3 picks for vegan stays in Bali.</p>
             </div>
-            <div class="latest-posts-body"></div>
-            <a href="#"><img src="" alt=""></a>
-            <a href="#">
-                <h3></h3>
-            </a>
-            <p></p>
+
+            <div class="latest-posts-body">
+                <a href="#"><img class="latest-posts-image" src="" alt=""></a>
+                <a class="title-link" href="#">
+                    <h3 class="latest-posts-title"></h3>
+                </a>
+                <p class="latest-posts-description"></p>
+            </div>
         </div>
     </section>
     <section>
