Add content and style to third .latest-posts-body

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 <hr>
                 <p class="latest-posts-description">Craving some vegan food while in Germany's capital city? Lucky for
                     you, Berlin is teeming with vegan-friendly restaurants, cafes, and bakeries, making it the perfect
-                    destination for plant-based travellers. Here are our top five picks for vegan places to visit in
+                    destination for plant-based travellers. Here are our <a class="title-link-2" href="#">5 picks for
+                        Vegan Places</a> to visit in
                     Berlin.</p>
             </div>
 
@@ -79,15 +80,21 @@
                 <hr>
                 <p class="latest-posts-description">If Bali is on your bucket list, than you're in for a treat. Not only
                     is the Island of the Gods stunning, with its pristine beaches, lush jungles and legendary sunsets,
-                    but it's also a vegan paradise. Here are our top 3 picks for vegan stays in Bali.</p>
+                    but it's also a vegan paradise. Here are our <a class="title-link-2" href="#">3 picks for Vegan
+                        Stays</a> in Bali.</p>
             </div>
 
             <div class="latest-posts-body">
-                <a href="#"><img class="latest-posts-image" src="" alt=""></a>
+                <a href="#"><img class="latest-posts-image" src="assets/images/dublin.jpg"
+                        alt="Tempel Bar Street in Dublin"></a>
                 <a class="title-link" href="#">
-                    <h3 class="latest-posts-title"></h3>
+                    <h3 class="latest-posts-title">The Top 3 Vegan Restaurants in Dublin, Ireland</h3>
                 </a>
-                <p class="latest-posts-description"></p>
+                <hr>
+                <p class="latest-posts-description">Dublin has an ever-growing number
+                    of plant-based eateries. Whether you're a local looking for some new culinary inspiration or a
+                    traveller in search of delicious vegan food, look no
+                    further than this list of the <a class="title-link-2" href="#">Top 3 Vegan Restaurants</a>.</p>
             </div>
         </div>
     </section>
