Add main structure of newsletter section

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <hr>
                 <p class="latest-posts-description">If Bali is on your bucket list, than you're in for a treat. Not only
                     is the Island of the Gods stunning, with its pristine beaches, lush jungles and legendary sunsets,
-                    but it's also a vegan paradise. Here are our <a class="title-link-2" href="#">3 picks for Vegan
+                    but it's also a vegan paradise. Here are our<a class="title-link-2" href="#">3 picks for Vegan
                         Stays</a> in Bali.</p>
             </div>
 
@@ -99,7 +99,19 @@
         </div>
     </section>
     <section>
-        Call to Action
+        <div id="newsletter-box">
+            <div id="newsletter-image">
+                <img src="assets/images/newsletter.jpg" alt="Vintage Camera on top of old suitcase">
+            </div>
+            <div id="newsletter-content">
+                <h3>Get your monthly dose of Travel and Food Inspo!</h3>
+                    <hr>
+                    <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
+                        up to our newsletter to receive ideas about your travel adventure and where to find the good
+                        culinary spots! </p>
+                    <button id="newsletter-signup"></button>
+            </div>
+        </div>
     </section>
     <footer>
         Social Media
