Add style for newsletter section

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="newsletter-section">
         <div id="newsletter-box">
             <div id="newsletter-image">
-                <img src="assets/images/newsletter.jpg" alt="Vintage Camera on top of old suitcase">
+                <!-- <img src="assets/images/newsletter.jpg" alt="Vintage Camera on top of old suitcase"> -->
             </div>
             <div id="newsletter-content">
                 <h3>Get your monthly dose of Travel and Food Inspo!</h3>
