--- a/index.html
+++ b/index.html
@@ -109,7 +109,14 @@
                     <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
                         up to our newsletter to receive ideas about your travel adventure and where to find the good
                         culinary spots! </p>
-                    <button id="newsletter-signup"></button>
+                    <form action="#" method="post">
+                        <label for="">First Name</label>
+                        <input type="text" id="fname" name="first_name" required>
+                        <label for="">Email Address</label>
+                        <input type="text" id="email" name="email-address" required>
+                        <input type="submit" value="Send me the Inspo">
+                    </form>
+                    
             </div>
         </div>
     </section>
