--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                     <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
                         up to our newsletter to receive ideas about your travel adventure and where to find the good
                         culinary spots! </p>
-                    <form action="#" method="post">
-                        <label for="">First Name</label>
-                        <input type="text" id="fname" name="first_name" required>
-                        <label for="">Email Address</label>
-                        <input type="text" id="email" name="email-address" required>
-                        <input type="submit" value="Send me the Inspo">
+                    <form action="#" method="post" class="newsletter-form">
+                        <label for="fname" id="fname"></label>
+                        <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name" required>
+                        <label for="email" id="email"></label>
+                        <input type="text" id="email" name="email-address" class="text-input" placeholder="Email Address" required>
+                        <input type="submit" value="Sign me up!" class="newsletter-button">
                     </form>
                     
             </div>
