Add font-weight to .title-link2 and add icon to h3 in newsletter-section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <img src="assets/images/newsletter.jpg" alt="Vintage Camera on top of old suitcase">
             </div>
             <div id="newsletter-content">
-                <h3>Get your monthly dose of Travel and Food Inspo!</h3>
+                <h3>Get your monthly dose of Travel and Food Inspo! <i class="fa-regular fa-envelope"></i></h3>
                     <hr>
                     <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
                         up to our newsletter to receive ideas about your travel adventure and where to find the good
