--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                         up to our newsletter to receive ideas about your travel adventure and where to find the good
                         culinary spots! </p>
                     <form action="#" method="post" class="newsletter-form">
-                        <label for="fname" id="fname"></label>
+                        <label for="fname"></label>
                         <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name" required>
-                        <label for="email" id="email"></label>
+                        <label for="email"></label>
                         <input type="text" id="email" name="email-address" class="text-input" placeholder="Email Address" required>
                         <input type="submit" value="Sign me up!" class="newsletter-button">
                     </form>
