Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -105,23 +105,42 @@
             </div>
             <div id="newsletter-content">
                 <h3>Get your monthly dose of Travel and Food Inspo! <i class="fa-regular fa-envelope"></i></h3>
-                    <hr>
-                    <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
-                        up to our newsletter to receive ideas about your travel adventure and where to find the good
-                        culinary spots! </p>
-                    <form action="#" method="post" class="newsletter-form">
-                        <label for="fname"></label>
-                        <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name" required>
-                        <label for="email"></label>
-                        <input type="text" id="email" name="email-address" class="text-input" placeholder="Email Address" required>
-                        <input type="submit" value="Sign me up!" class="newsletter-button">
-                    </form>
-                    
+                <hr>
+                <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
+                    up to our newsletter to receive ideas about your travel adventure and where to find the good
+                    culinary spots! </p>
+                <form action="#" method="post" class="newsletter-form">
+                    <label for="fname"></label>
+                    <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name"
+                        required>
+                    <label for="email"></label>
+                    <input type="text" id="email" name="email-address" class="text-input" placeholder="Email Address"
+                        required>
+                    <input type="submit" value="Sign me up!" class="newsletter-button">
+                </form>
+
             </div>
         </div>
     </section>
     <footer>
-        Social Media
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit out Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit out Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://pinterest.com" target="_blank" rel="noopener"
+                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-square-pinterest"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- Font Awesome Script -->
