Change footer icons and margin for icons

--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
         <ul class="social-networks">
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                    aria-label="Visit out Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Twitter page (opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                    aria-label="Visit out Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
             </li>
             <li>
                 <a href="http://pinterest.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-square-pinterest"></i></a>
+                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
