Add core html to travel, food and about us page

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             </a>
             <ul id="menu">
                 <li>
-                    <a href="#">HOME</a>
+                    <a href="index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="#">TRAVEL</a>
+                    <a href="travel.html">TRAVEL</a>
                 </li>
                 <li>
-                    <a href="#">FOOD</a>
+                    <a href="food.html">FOOD</a>
                 </li>
                 <li>
-                    <a href="#">ABOUT US</a>
+                    <a href="about-us.html">ABOUT US</a>
                 </li>
             </ul>
         </nav>
