Add html link to our-story button and made newsletter open in a new tab when clicking the newsletter-button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h1>One Backpack For Two</h1>
                 <p>Two Ladies discovering Top Travel Destinations and delicious Vegan Food while exploring the World!
                 </p>
-                <button class="our-story">Our Story</button>
+                <a href="about-us.html"><button class="our-story">Our Story</button></a>
             </div>
         </div>
     </section>
@@ -59,43 +59,43 @@
         <hr>
         <div id="latest-posts">
             <div class="latest-posts-body">
-                <a href="#"><img class="latest-posts-image" src="assets/images/berlin.jpg"
+                <a href="food.html"><img class="latest-posts-image" src="assets/images/berlin.jpg"
                         alt="Brandenburger Gate Berlin"></a>
-                <a class="title-link" href="#">
+                <a class="title-link" href="food.html">
                     <h3 class="latest-posts-title">Top 5 Vegan Restaurants to Visit in Berlin, Germany</h3>
                 </a>
                 <hr>
                 <p class="latest-posts-description">Craving some vegan food while in Germany's capital city? Lucky for
                     you, Berlin is teeming with vegan-friendly restaurants, cafes, and bakeries, making it the perfect
-                    destination for plant-based travellers. Here are our <a class="title-link-2" href="#">5 picks for
+                    destination for plant-based travellers. Here are our <a class="title-link-2" href="food.html">5 picks for
                         Vegan Places</a> to visit in
                     Berlin.</p>
             </div>
 
             <div class="latest-posts-body">
-                <a href="#"><img class="latest-posts-image" src="assets/images/bali.jpg"
+                <a href="travel.html"><img class="latest-posts-image" src="assets/images/bali.jpg"
                         alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains"></a>
-                <a class="title-link" href="#">
+                <a class="title-link" href="travel.html">
                     <h3 class="latest-posts-title">Top 3 Vegan Accomodations in Bali, Indonesia</h3>
                 </a>
                 <hr>
                 <p class="latest-posts-description">If Bali is on your bucket list, than you're in for a treat. Not only
                     is the Island of the Gods stunning, with its pristine beaches, lush jungles and legendary sunsets,
-                    but it's also a vegan paradise. Here are our<a class="title-link-2" href="#">3 picks for Vegan
+                    but it's also a vegan paradise. Here are our<a class="title-link-2" href="travel.html">3 picks for Vegan
                         Stays</a> in Bali.</p>
             </div>
 
             <div class="latest-posts-body">
-                <a href="#"><img class="latest-posts-image" src="assets/images/dublin.jpg"
+                <a href="food.html"><img class="latest-posts-image" src="assets/images/dublin.jpg"
                         alt="Tempel Bar Street in Dublin"></a>
-                <a class="title-link" href="#">
+                <a class="title-link" href="food.html">
                     <h3 class="latest-posts-title">The Top 3 Vegan Restaurants in Dublin, Ireland</h3>
                 </a>
                 <hr>
                 <p class="latest-posts-description">Dublin has an ever-growing number
                     of plant-based eateries. Whether you're a local looking for some new culinary inspiration or a
                     traveller in search of delicious vegan food, look no
-                    further than this list of the <a class="title-link-2" href="#">Top 3 Vegan Restaurants</a>.</p>
+                    further than this list of the <a class="title-link-2" href="food.html">Top 3 Vegan Restaurants</a>.</p>
             </div>
         </div>
     </section>
@@ -110,7 +110,7 @@
                 <p>In need of some inspiration for your travels and on the hunt for some delish foodie places? Sign
                     up to our newsletter to receive ideas about your travel adventure and where to find the good
                     culinary spots! </p>
-                <form action="#" method="post" class="newsletter-form">
+                <form action="#" target="_blank" method="post" class="newsletter-form">
                     <label for="fname"></label>
                     <input type="text" id="fname" name="first_name" class="text-input" placeholder="First Name"
                         required>
