Add main structure for about.html

--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        
+
         <nav>
             <a href="index.html">
                 <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
@@ -39,11 +39,22 @@
                     <a href="food.html">FOOD</a>
                 </li>
                 <li>
-                    <a href="about-us.html" class="active" >ABOUT US</a>
+                    <a href="about-us.html" class="active">ABOUT US</a>
                 </li>
             </ul>
         </nav>
     </header>
+    <section>
+        <h1>Who we are <i class="fa-solid fa-venus"></i></h1>
+        <div id="about-us">
+            <div class="about-us-content">
+                <img src="" alt="">
+            </div>
+            <div class="about-us-content">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
 
     <footer>
         <ul class="social-networks">
@@ -53,7 +64,8 @@
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit out Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
@@ -61,7 +73,8 @@
             </li>
             <li>
                 <a href="http://pinterest.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                    aria-label="Visit out Pinterest page (opens in a new tab)"><i
+                        class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
