--- a/about-us.html
+++ b/about-us.html
@@ -45,13 +45,28 @@
         </nav>
     </header>
     <section>
-        <h1>Who we are <i class="fa-solid fa-venus"></i></h1>
+        <h1 id="about-us-heading">Who we are <i class="fa-solid fa-venus"></i></h1>
         <div id="about-us">
             <div class="about-us-content">
-                <img src="" alt="">
+                <img src="assets/images/Lila.jpg" alt="Headshot of woman smiling">
+                <h2>Lila,30</h2>
+                <p>I'm Lila, a pastry chef originally from Germany. I started travelling at the age of 19 and never
+                    stopped- my first stop was New Zealand and I'm currently living in Ireland. I've visited more than
+                    15 countries and love trying new foods (I'm a bit of a foodie). Every place I go to leaves an
+                    impression on me, whether it's the stunning scenery or the interesting people I meet.
+                    <br>
+                    Travelling has helped me develop a lot as a person and learn about different cultures; it's
+                    definitely been one of
+                    the best things to happen to me.</p>
             </div>
             <div class="about-us-content">
-                <img src="" alt="">
+                <img src="assets/images/Saskia.jpg" alt="Headshot of woman facing the Camera">
+                <h2>Saskia,31</h2>
+                <p>Hi, I'm the technical brain behind the blog. I enjoy programming immensely as well as hiking,
+                    travelling and eating vegan food. I also end up taking many of the photographs.
+                    <br>
+                    Growing up in Sao Paulo, Brazil, I developed a love for travel at a young age. I love visiting new
+                    places and learning about different cultures.</p>
             </div>
         </div>
     </section>
