--- a/travel.html
+++ b/travel.html
@@ -23,7 +23,7 @@
 
 <body>
     <header>
-        
+
         <nav>
             <a href="index.html">
                 <img id="logo" src="assets/images/One-Backpack-For-Two_logo.png" alt="logo">
@@ -36,15 +36,54 @@
                     <a href="travel.html" class="active">TRAVEL</a>
                 </li>
                 <li>
-                    <a href="#">FOOD</a>
+                    <a href="food.html">FOOD</a>
                 </li>
                 <li>
-                    <a href="#">ABOUT US</a>
+                    <a href="about-us.html">ABOUT US</a>
                 </li>
             </ul>
         </nav>
     </header>
-
+    <section>
+        <h1 id="travel-heading">Travel Posts</h1>
+        <div class="travel-post">
+            <h2 class="travel-post-heading">Top 3 Vegan Accomodations in Bali, Indonesia</h2>
+            <img src="assets/images/bali.jpg"
+                alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains">
+            <p>Friday, 09.09.2022</p>
+            <p>When it comes to vegan travel, Bali definitely delivers. The Island of the Gods has everything from
+                beachfront bungalows to hipster hostels, all serving up a delicious plant-based fare. So whether you're
+                looking to indulge in some serious R&R or just want to experience the best of Balinese culture, there's
+                a vegan stay for you.
+            </p>
+            <div>
+                <ol>
+                    <li>The Shanti Residence <br>
+                        This luxury villa is perfect for vegans who want to experience the best of what Bali has to
+                        offer. Set amidst tropical gardens and located just minutes from Seminyak Beach, The Shanti
+                        Residence is a haven of peace and tranquillity. And the best part? All of the food is 100%
+                        vegan. From breakfast bowls brimming with fresh fruits to hearty mains like jackfruit curry,
+                        you'll be spoilt for choice.</li>
+                    <li>Bali Eco Stay <br>
+                        For those who want to get back to nature, Bali Eco Stay is the perfect place to
+                        stay. This working farm offers guests the chance to get their hands dirty and learn about
+                        organic farming methods. And when you're not busy tending to the rice paddies or collecting eggs
+                        from the free-range chickens, you can tuck into some seriously good vegan food. Think tempeh
+                        tacos and nasi goreng made with homemade seitan. Delish!</li>
+                    <li>Jungle Fish <br>
+                        Located in Ubud, Jungle Fish is a haven for health-conscious travellers. As well as offering
+                        yoga and meditation classes, this luxury retreat also serves up some of the best vegan food in
+                        Bali. Highlights include raw lasagna made with zucchini noodles and an epic avocado chocolate
+                        mousse that will have you drooling for days afterwards.</li>
+                </ol>
+            </div>
+            <p>Bali is fast becoming one of the most popular destinations for vegans and non-vegans alike. So if you're
+                planning a trip to this idyllic island, be sure to check out one of these amazing vegan stays. From
+                luxury villas to working farms, there's something for everyone. And with so much delicious plant-based
+                food on offer, you'll be spoilt for choice!
+            </p>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
@@ -53,7 +92,8 @@
             </li>
             <li>
                 <a href="http://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+                    aria-label="Visit out Instagram page (opens in a new tab)"><i
+                        class="fa-brands fa-instagram"></i></a>
             </li>
             <li>
                 <a href="http://twitter.com" target="_blank" rel="noopener"
@@ -61,7 +101,8 @@
             </li>
             <li>
                 <a href="http://pinterest.com" target="_blank" rel="noopener"
-                    aria-label="Visit out Pinterest page (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                    aria-label="Visit out Pinterest page (opens in a new tab)"><i
+                        class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
