Change <section> for <article> in travel.html and fix styling for travel.html

--- a/travel.html
+++ b/travel.html
@@ -44,9 +44,8 @@
             </ul>
         </nav>
     </header>
-    <section>
         <h1 id="travel-heading">Travel Posts</h1>
-        <div class="travel-post">
+        <article class="travel-post">
             <h2 class="travel-post-heading">Top 3 Vegan Accomodations in Bali, Indonesia</h2>
             <img src="assets/images/bali.jpg"
                 alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains">
@@ -76,14 +75,13 @@
                         Bali. Highlights include raw lasagna made with zucchini noodles and an epic avocado chocolate
                         mousse that will have you drooling for days afterwards.</li>
                 </ol>
-            </div>
+            </article>
             <p>Bali is fast becoming one of the most popular destinations for vegans and non-vegans alike. So if you're
                 planning a trip to this idyllic island, be sure to check out one of these amazing vegan stays. From
                 luxury villas to working farms, there's something for everyone. And with so much delicious plant-based
                 food on offer, you'll be spoilt for choice!
             </p>
         </div>
-    </section>
     <footer>
         <ul class="social-networks">
             <li>
