--- a/travel.html
+++ b/travel.html
@@ -44,44 +44,54 @@
             </ul>
         </nav>
     </header>
-        <h1 id="travel-heading">Travel Posts</h1>
-        <article class="travel-post">
-            <h2 class="travel-post-heading">Top 3 Vegan Accomodations in Bali, Indonesia</h2>
-            <img src="assets/images/bali.jpg"
-                alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains">
-            <p>Friday, 09.09.2022</p>
-            <p>When it comes to vegan travel, Bali definitely delivers. The Island of the Gods has everything from
-                beachfront bungalows to hipster hostels, all serving up a delicious plant-based fare. So whether you're
-                looking to indulge in some serious R&R or just want to experience the best of Balinese culture, there's
-                a vegan stay for you.
-            </p>
-            <div>
-                <ol>
-                    <li>The Shanti Residence <br>
-                        This luxury villa is perfect for vegans who want to experience the best of what Bali has to
-                        offer. Set amidst tropical gardens and located just minutes from Seminyak Beach, The Shanti
-                        Residence is a haven of peace and tranquillity. And the best part? All of the food is 100%
-                        vegan. From breakfast bowls brimming with fresh fruits to hearty mains like jackfruit curry,
-                        you'll be spoilt for choice.</li>
-                    <li>Bali Eco Stay <br>
-                        For those who want to get back to nature, Bali Eco Stay is the perfect place to
-                        stay. This working farm offers guests the chance to get their hands dirty and learn about
-                        organic farming methods. And when you're not busy tending to the rice paddies or collecting eggs
-                        from the free-range chickens, you can tuck into some seriously good vegan food. Think tempeh
-                        tacos and nasi goreng made with homemade seitan. Delish!</li>
-                    <li>Jungle Fish <br>
-                        Located in Ubud, Jungle Fish is a haven for health-conscious travellers. As well as offering
-                        yoga and meditation classes, this luxury retreat also serves up some of the best vegan food in
-                        Bali. Highlights include raw lasagna made with zucchini noodles and an epic avocado chocolate
-                        mousse that will have you drooling for days afterwards.</li>
-                </ol>
-            </article>
-            <p>Bali is fast becoming one of the most popular destinations for vegans and non-vegans alike. So if you're
-                planning a trip to this idyllic island, be sure to check out one of these amazing vegan stays. From
-                luxury villas to working farms, there's something for everyone. And with so much delicious plant-based
-                food on offer, you'll be spoilt for choice!
-            </p>
-        </div>
+    <h1 id="travel-heading">Travel Posts</h1>
+    <article class="travel-post">
+        <h2 class="travel-post-heading">Top 3 Vegan Accomodations in Bali, Indonesia</h2>
+        <img src="assets/images/bali.jpg"
+            alt="Woman sitting on steps of a house overlooking a beach sourrounded by mountains">
+        <span><em>Friday, 09.09.2022</em></span>
+        <hr>
+        <p>When it comes to vegan travel, Bali definitely delivers. The Island of the Gods has everything from
+            beachfront bungalows to hipster hostels, all serving up a delicious plant-based fare. So whether you're
+            looking to indulge in some serious R&R or just want to experience the best of Balinese culture, there's
+            a vegan stay for you.
+        </p>
+        <hr>
+        <ol>
+            <li>The Shanti Residence</li>
+            <img src="assets/images/TheShantiResidence.jpg" alt="room with a private outdoor pool">
+            <p>This luxury villa is perfect for vegans who want to experience the best of what Bali has to
+                offer. Set amidst tropical gardens and located just minutes from Seminyak Beach, The Shanti
+                Residence is a haven of peace and tranquillity. And the best part? All of the food is 100%
+                vegan. From breakfast bowls brimming with fresh fruits to hearty mains like jackfruit curry,
+                you'll be spoilt for choice.</p>
+            <hr>
+            <li>Bali Eco Stay</li>
+            <img src="assets/images/BaliEcoStay.jpg" alt="Tree House surrounded by forrest">
+            <p>For those who want to get back to nature, Bali Eco Stay is the perfect place to
+                stay. This working farm offers guests the chance to get their hands dirty and learn about
+                organic farming methods. And when you're not busy tending to the rice paddies or collecting eggs
+                from the free-range chickens, you can tuck into some seriously good vegan food. Think tempeh
+                tacos and nasi goreng made with homemade seitan. Delish!</p>
+            <hr>
+            <li>Chapung Sebali</li>
+            <img src="assets/images/ChapungSebali.jpg"
+                alt="view of the pool and terrace and woman sitting on rock in pool ">
+            <p>Located in Ubud, Chapung Sebali is a haven for health-conscious travellers. As well as offering
+                yoga and meditation classes, this luxury retreat also serves up some of the best vegan food in
+                Bali. Highlights include raw lasagna made with zucchini noodles and an epic avocado chocolate
+                mousse that will have you drooling for days afterwards.</p>
+        </ol>
+        <hr>
+        <p>Conclusion: <br>Bali is fast becoming one of the most popular destinations for vegans and non-vegans
+            alike.
+            So if you're
+            planning a trip to this idyllic island, be sure to check out one of these amazing vegan stays. From
+            luxury villas to working farms, there's something for everyone. And with so much delicious plant-based
+            food on offer, you'll be spoilt for choice!
+        </p>
+
+    </article>
     <footer>
         <ul class="social-networks">
             <li>
