Fix structure on travel.html by removing <ol> and adding <sections>

--- a/travel.html
+++ b/travel.html
@@ -57,33 +57,38 @@
             a vegan stay for you.
         </p>
         <hr>
-        <ol>
-            <li>The Shanti Residence</li>
+        <section>
+            <h3>The Shanti Residence</h3>
             <img src="assets/images/TheShantiResidence.jpg" alt="room with a private outdoor pool">
             <p>This luxury villa is perfect for vegans who want to experience the best of what Bali has to
                 offer. Set amidst tropical gardens and located just minutes from Seminyak Beach, The Shanti
                 Residence is a haven of peace and tranquillity. And the best part? All of the food is 100%
                 vegan. From breakfast bowls brimming with fresh fruits to hearty mains like jackfruit curry,
                 you'll be spoilt for choice.</p>
-            <hr>
-            <li>Bali Eco Stay</li>
+        </section>
+        <hr>
+        <section>
+            <h3>Bali Eco Stay</h3>
             <img src="assets/images/BaliEcoStay.jpg" alt="Tree House surrounded by forrest">
             <p>For those who want to get back to nature, Bali Eco Stay is the perfect place to
                 stay. This working farm offers guests the chance to get their hands dirty and learn about
                 organic farming methods. And when you're not busy tending to the rice paddies or collecting eggs
                 from the free-range chickens, you can tuck into some seriously good vegan food. Think tempeh
                 tacos and nasi goreng made with homemade seitan. Delish!</p>
-            <hr>
-            <li>Chapung Sebali</li>
+        </section>
+        <hr>
+
+        <section>
+            <h3>Chapung Sebali</h3>
             <img src="assets/images/ChapungSebali.jpg"
                 alt="view of the pool and terrace and woman sitting on rock in pool ">
             <p>Located in Ubud, Chapung Sebali is a haven for health-conscious travellers. As well as offering
                 yoga and meditation classes, this luxury retreat also serves up some of the best vegan food in
                 Bali. Highlights include raw lasagna made with zucchini noodles and an epic avocado chocolate
                 mousse that will have you drooling for days afterwards.</p>
-        </ol>
+        </section>
         <hr>
-        <p>Conclusion: <br>Bali is fast becoming one of the most popular destinations for vegans and non-vegans
+        <p><em>Conclusion:</em> <br>Bali is fast becoming one of the most popular destinations for vegans and non-vegans
             alike.
             So if you're
             planning a trip to this idyllic island, be sure to check out one of these amazing vegan stays. From
