Add main structure and styling of food.html

--- a/food.html
+++ b/food.html
@@ -44,7 +44,77 @@
             </ul>
         </nav>
     </header>
+    <h1 id="food-heading">Food Posts</h1>
 
+     <!-- The Top 3 Vegan Restaurants in Dublin, Ireland -->
+    <article class="food-post">
+        <h2 class="food-post-heading"></h2>
+        <img src=""
+            alt="">
+        <span><em></em></span>
+        <hr>
+        <p>
+        </p>
+        <hr>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <p></p>
+        </section>
+        <hr>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <p></p>
+        </section>
+        <hr>
+
+        <section>
+            <h3></h3>
+            <img src=""
+                alt="">
+            <p></p>
+        </section>
+        <hr>
+        <p><em>Conclusion:</em> <br>
+        </p>
+
+    </article>
+
+ <!-- Top 5 Vegan Restaurants to Visit in Berlin, Germany  -->
+    <article class="food-post">
+        <h2 class="food-post-heading"></h2>
+        <img src=""
+            alt="">
+        <span><em></em></span>
+        <hr>
+        <p>
+        </p>
+        <hr>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <p></p>
+        </section>
+        <hr>
+        <section>
+            <h3></h3>
+            <img src="" alt="">
+            <p></p>
+        </section>
+        <hr>
+
+        <section>
+            <h3></h3>
+            <img src=""
+                alt="">
+            <p></p>
+        </section>
+        <hr>
+        <p><em>Conclusion:</em> <br>
+        </p>
+
+    </article>
     <footer>
         <ul class="social-networks">
             <li>
